# pi-manager

./: .gitignore  Cargo.toml  README.md  flake.nix  public.gpg  rust-toolchain.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
docs/: configuration.md
pool/main/: pi-manager_0.0.1-1_amd64.deb  pi-manager_0.0.2-1_amd64.deb
src/: cli.rs  main.rs  manager.rs  paths.rs  schema.rs  tui.rs
tests/: cli.rs
