[package]
name = "pi-manager"
version = "0.1.0"
edition = "2021"
description = "Profile manager for pi (AI coding agent). Switch between independent config profiles."
authors = ["steven"]

[[bin]]
name = "pim"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
