[package]
name = "pi-manager"
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0"
description = "Profile manager for pi (AI coding agent). Switch between independent config profiles."
authors = ["steven"]
license = "MIT"
repository = "https://github.com/stevenhansel/pi-manager"
keywords = ["pi", "ai", "coding", "profiles", "agent"]
categories = ["command-line-utilities"]

[[bin]]
name = "pim"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dialoguer = "0.11"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
cargo = "warn"
pedantic = { level = "warn", priority = -1 }

[package.metadata.deb]
maintainer = "Steven Hansel <steven.hansel@tu-dortmund.de>"
assets = [
    ["target/release/pim", "usr/bin/pim", "755"],
    ["README.md", "usr/share/doc/pim/README.md", "644"]
]
